crates/schema/tests/compile_fail/derive_secret_with_multiline.stderr
error: `#[field(multiline)]` does not apply to secret fields — secret values are always rendered as masked single-line input
 --> tests/compile_fail/derive_secret_with_multiline.rs:7:5
  |
7 |     api_key: String,
  |     ^^^^^^^

error[E0599]: no associated function or constant named `schema` found for struct `Bad` in the current scope
  --> tests/compile_fail/derive_secret_with_multiline.rs:11:18
   |
 5 | struct Bad {
   | ---------- associated function or constant `schema` not found for this struct
...
11 |     let _ = Bad::schema();
   |                  ^^^^^^ associated function or constant not found in `Bad`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `schema`, perhaps you need to implement it:
           candidate #1: `HasSchema`
